--- a/EFTWORKER-ICG/appsettings.json
+++ b/EFTWORKER-ICG/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RequestPath": "C:\\Users\\KAZEEM\\Documents\\EFT-folder-export"
+  "RequestPath": "C:\\Users\\KAZEEM\\Documents\\EFT-folder-export",
+  "COMPort": "COM 6",
+  "BauRate": 115200
 }
